--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,42 @@
 body {
-    background-color: blue;
+    margin: 0px;
+    text-align: center;
+}
+
+.topContainer {
+    background-color: #E4F5F5;
+    position: relative;
+    padding-top: 100px;
+}
+
+.middleContainer {
+    background-color: red;
+    height: 200px;
+    width: 200px;
+}
+
+.bottomContainer {
+    background-color: green;
+    height: 200px;
+    width: 200px;
+}
+
+h1 {
+    margin-top: 0;
+}
+
+.pro {
+    text-decoration: underline;
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 300px;
+    bottom: 300px
+}
+
+.top-cloud {
+    position: absolute;
+    right: 300px;
+    top: 50px;
 }
