--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0px;
     text-align: center;
+    font-family: "Merriweather", serif;
 }
 
 .topContainer {
@@ -10,19 +11,34 @@ body {
 }
 
 .middleContainer {
-    background-color: red;
-    height: 200px;
-    width: 200px;
+
 }
 
 .bottomContainer {
-    background-color: green;
-    height: 200px;
-    width: 200px;
+
 }
 
 h1 {
-    margin-top: 0;
+    font-size: 5.625rem;
+    margin: 50px auto 0 auto;
+    font-family: "Sacramento", cursive;
+    color: #66BFBF;
+}
+
+h2 {
+    font-size: 2.5rem;
+    font-family: "Montserrat", sans-serif;
+    color: #66BFBF;
+    font-weight: normal
+}
+
+h3 {
+    font-family: "Montserrat", sans-serif;
+    color: #11999E
+}
+
+a {
+    color: #11999E
 }
 
 .pro {
@@ -39,4 +55,17 @@ h1 {
     position: absolute;
     right: 300px;
     top: 50px;
+}
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+}
+
+.skill-image {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
 }
